@@ -437,6 +437,11 @@ CHANGES
     - Fixed incorrect exception raise in 
       Weak/StrongIdentityMap.add() 
       [ticket:1506]
+
+    - Fixed the error message for "could not find a FROM clause"
+      in query.join() which would fail to issue correctly
+      if the query was against a pure SQL construct.
+      [ticket:1522]
       
     - Fixed a somewhat hypothetical issue which would result
       in the wrong primary key being calculated for a mapper
